HW1 finish polishing